// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> when centered matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
        justify-content: center;
      }
>
  <StyledCustomizedSpinner
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 0.8rem;
          margin-right: 0;
          margin-top: -2px;
        }
    color="primary"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with additional className matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
      }
>
  <StyledCustomizedSpinner
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 0.8rem;
          margin-right: 0;
          margin-top: -2px;
        }
    color="primary"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with dark color matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
      }
>
  <StyledCustomizedSpinner
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(255, 255, 255, 0.3)",
          "borderTopColor": "#ffffff",
        },
      }
    }
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 0.8rem;
          margin-right: 0;
          margin-top: -2px;
        }
    color="white"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with invisible text matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
      }
>
  <StyledCustomizedSpinner
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <ScreenreaderText>
    Loading
  </ScreenreaderText>
</div>
`;

exports[`<Spinner /> with large size matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: column;
      }
>
  <StyledCustomizedSpinner
    size={3}
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0.4rem;
        }
    color="primary"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with metadata color matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
      }
>
  <StyledCustomizedSpinner
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 0.8rem;
          margin-right: 0;
          margin-top: -2px;
        }
    color="metadata"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with visible text matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
      }
>
  <StyledCustomizedSpinner
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 0.8rem;
          margin-right: 0;
          margin-top: -2px;
        }
    color="primary"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with xSmall size matches its snapshot 1`] = `
<div
  className=
      y-spinner
      {
        align-items: center;
        display: flex;
        flex-direction: row;
      }
>
  <StyledCustomizedSpinner
    size={0}
    styles={
      Object {
        "circle": Object {
          "border": "2px solid rgba(56, 108, 187, 0.3)",
          "borderTopColor": "#386cbb",
        },
      }
    }
  />
  <Text
    className=

        {
          margin-bottom: 0;
          margin-left: 0.6rem;
          margin-right: 0;
          margin-top: -1px;
        }
    color="primary"
    size="small"
  >
    Loading
  </Text>
</div>
`;
